# docs/apidocs.swagger.json
@@ -1,10 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "api/user/v1/user.proto",
+    "title": "api/sms/v1/sms.proto",
     "version": "version not set"
   },
   "tags": [
+    {
+      "name": "SMSService"
+    },
     {
       "name": "UserService"
     }
@@ -347,6 +350,157 @@
           "UserService"
         ]
       }
+    },
+    "/v1/sms/send": {
+      "post": {
+        "summary": "发送短信",
+        "operationId": "SMSService_SendSMS",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/smsv1SendSMSResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/smsv1SendSMSRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SMSService"
+        ]
+      }
+    },
+    "/v1/sms/signature": {
+      "post": {
+        "summary": "管理短信签名",
+        "operationId": "SMSService_ManageSMSSignature",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/smsv1SignatureManagementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/smsv1SignatureManagementRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SMSService"
+        ]
+      }
+    },
+    "/v1/sms/status/{smsId}/{mobileNumber}": {
+      "get": {
+        "summary": "查询短信状态",
+        "operationId": "SMSService_QuerySMSStatus",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/smsv1QuerySMSStatusResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "smsId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "mobileNumber",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "startTime",
+            "description": "可选参数",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "endTime",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "SMSService"
+        ]
+      }
+    },
+    "/v1/sms/template": {
+      "post": {
+        "summary": "管理短信模板",
+        "operationId": "SMSService_ManageSMSTemplate",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/smsv1TemplateManagementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/smsv1TemplateManagementRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SMSService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -377,6 +531,178 @@
           }
         }
       }
+    },
+    "smsv1QuerySMSStatusResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/smsv1SMSStatus"
+          }
+        }
+      },
+      "title": "查询短信状态响应"
+    },
+    "smsv1SMSSignature": {
+      "type": "object",
+      "properties": {
+        "signatureId": {
+          "type": "string"
+        },
+        "signatureContent": {
+          "type": "string"
+        },
+        "signatureType": {
+          "type": "string",
+          "title": "可选参数"
+        },
+        "signatureStatus": {
+          "type": "string"
+        }
+      },
+      "title": "短信签名"
+    },
+    "smsv1SMSStatus": {
+      "type": "object",
+      "properties": {
+        "smsId": {
+          "type": "string"
+        },
+        "mobileNumber": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        },
+        "timestamp": {
+          "type": "string",
+          "format": "int64"
+        }
+      },
+      "title": "短信状态"
+    },
+    "smsv1SMSTemplate": {
+      "type": "object",
+      "properties": {
+        "templateId": {
+          "type": "string"
+        },
+        "templateContent": {
+          "type": "string"
+        },
+        "templateName": {
+          "type": "string",
+          "title": "可选参数"
+        },
+        "templateStatus": {
+          "type": "string"
+        }
+      },
+      "title": "短信模板"
+    },
+    "smsv1SendSMSRequest": {
+      "type": "object",
+      "properties": {
+        "mobileNumber": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "senderId": {
+          "type": "string"
+        },
+        "templateId": {
+          "type": "string",
+          "title": "可选参数"
+        },
+        "templateParameters": {
+          "type": "string"
+        }
+      },
+      "title": "发送短信请求"
+    },
+    "smsv1SendSMSResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "errorMessage": {
+          "type": "string"
+        }
+      },
+      "title": "发送短信响应"
+    },
+    "smsv1SignatureManagementRequest": {
+      "type": "object",
+      "properties": {
+        "signature": {
+          "$ref": "#/definitions/smsv1SMSSignature",
+          "title": "可选参数，用于创建或编辑签名"
+        },
+        "signatureId": {
+          "type": "string",
+          "title": "可选参数，用于删除签名"
+        }
+      },
+      "title": "管理短信签名请求"
+    },
+    "smsv1SignatureManagementResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "errorMessage": {
+          "type": "string"
+        },
+        "signatures": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/smsv1SMSSignature"
+          },
+          "title": "可选参数，返回签名列表"
+        }
+      },
+      "title": "管理短信签名响应"
+    },
+    "smsv1TemplateManagementRequest": {
+      "type": "object",
+      "properties": {
+        "template": {
+          "$ref": "#/definitions/smsv1SMSTemplate",
+          "title": "可选参数，用于创建或编辑模板"
+        },
+        "templateId": {
+          "type": "string",
+          "title": "可选参数，用于删除模板"
+        }
+      },
+      "title": "管理短信模板请求"
+    },
+    "smsv1TemplateManagementResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "errorMessage": {
+          "type": "string"
+        },
+        "templates": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/smsv1SMSTemplate"
+          },
+          "title": "可选参数，返回模板列表"
+        }
+      },
+      "title": "管理短信模板响应"
     },
     "userv1AuthenticationResponse": {
       "type": "object",
